--- a/distcode/0807charting.html
+++ b/distcode/0807charting.html
@@ -101,7 +101,7 @@
                 discreteValues: 11,
                 intermediateChanges: true,
                 showButtons: true">
-            <ol data-dojo-type = "dijit/form/HorizontalRuleLabels" container = "topDecoration"
+            <ol data-dojo-type = "." container = "topDecoration"
                 style = "height: 1.5em; font-size: 75%; color: gray;">
                 <li>20%</li>
                 <li>40%</li>
