--- a/distcode/vue/给列表单独添加一个类名.html
+++ b/distcode/vue/给列表单独添加一个类名.html
@@ -39,13 +39,7 @@
         new Vue({
             el: '#app',
             data: {
-                tabs: [
-                    "one",
-                    "two",
-                    "three",
-                    "four",
-                    "five"
-                ],
+                tabs: ["one", "two", "three", "four", "five"],
                 currentTab: ""
             },
             methods: {
