--- a/distcode/vue/作用域插槽.html
+++ b/distcode/vue/作用域插槽.html
@@ -80,7 +80,8 @@
                     { what: '打扮' },
                     { what: '逛' },
                     { what: '吃' },
-                    { what: '打扮' }
+                    { what: '打扮' },
+                    { what: "hello"}
                 ]
             }
         })
