--- a/distcode/vue/tab.html
+++ b/distcode/vue/tab.html
@@ -27,6 +27,9 @@
             list-style: none;
             padding: 0;
         }
+        .tab-one ul li:hover {
+            background-color: rgb(233, 245, 179)
+        }
     </style>
 </head>
 <body>
